edit response error format json, add method rpc call from auth service: create account, get account info...
